--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.form-select:focus{
+  border: #03203C solid 1px;
+  box-shadow: none;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.form-control:focus{
+  border: #03203C solid 1px;
+  box-shadow: none;
+}
+.form-control:focus{
+  border: #03203C solid 1px;
+  box-shadow: none;
+}
+body{
+  background-color: #03203C;
+  color:white
+}
+button{
+  margin: 10px;
+}
+.video{
+  margin-left:20px;
+  margin-right: 20px;
 }
